# inventory-grpc-rust

./: Cargo.toml  LICENSE  README.md
proto/: store.proto
src/: cli.rs  store.rs
